2012-08-06  Julien Danjou  <julien@danjou.info>

	* gnus-int.el (gnus-request-head): Add an optional to-buffer parameter
	to mimic `gnus-request-article' and enjoy backends the nn*-request-head
	to-buffer argument that is already supported.

2012-08-05  Julien Danjou  <julien@danjou.info>

	* gnus-demon.el (gnus-demon-add-handler, gnus-demon-remove-handler):
	Add autoload.

2012-07-31  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-valid-select-methods): Fix custom type.

2012-07-29  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el (auth-sources, auth-source-backend-parse)
	(auth-source-macos-keychain-search)
	(auth-source-macos-keychain-search-items)
	(auth-source-macos-keychain-result-append)
	(auth-source-macos-keychain-create): Support Mac OS X Keychains in
	auth-source.el through the /usr/bin/security utility.
	(auth-sources): Fix syntax error.
	(auth-source-macos-keychain-result-append): Fix variable name.
	(auth-sources, auth-source-macos-keychain-result-append): More fixes.

2012-07-27  Julien Danjou  <julien@danjou.info>

	* message.el (fboundp): Add a defalias on `mail-dont-reply-to' for
	Emacs < 24.1

2012-07-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* message.el (message-kill-address): Don't kill last newline.
	(message-skip-to-next-address): Don't move to the next header.
	(message-fill-field-address): Work properly.

2012-07-25  Julien Danjou  <julien@danjou.info>

	* gnus-art.el (gnus-kill-sticky-article-buffers): Reintroduce.

2012-07-24  Julien Danjou  <julien@danjou.info>

	* mail-source.el (mail-source-movemail-and-remove): Remove, unused.

	* nntp.el (nntp-send-nosy-authinfo, nntp-send-authinfo-from-file)
	(nntp-async-timer-handler): Remove, unused.

	* nnimap.el (nnimap-get-responses): Remove, unused.

	* nnheader.el (mail-header-set-extra): Remove, unused.

	* netrc.el (netrc-find-service-number, netrc-store-data): Remove,
	unused.

	* mm-view.el (mm-view-sound-file): Remove, unused.
