@@ -1,5 +1,10 @@
 2012-08-06  Julien Danjou  <julien@danjou.info>
 
+	* nnimap.el (nnimap-request-article): Remove to-buffer argument.
+
+	* gnus-int.el (gnus-request-head): Remove to-buffer argument, only
+	supported by nnimap actually. Reverts previous change.
+
 	* gnus-int.el (gnus-request-head): Add an optional to-buffer parameter
 	to mimic `gnus-request-article' and enjoy backends the nn*-request-head
 	to-buffer argument that is already supported.
